--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-<header>
+<!-- <header>
     <h1>George Steven Marcell</h1>
     <p>Backend Fullstack Developer</p>
 </header>
@@ -80,7 +80,7 @@
     <p>Email: your.email@example.com</p>
     <p>GitHub: <a href="#">github.com/yourusername</a></p>
     <p>LinkedIn: <a href="#">linkedin.com/in/yourprofile</a></p>
-</section>
+</section> -->
 
 <footer>
     <p>&copy; 2025 Your Name. All Rights Reserved.</p>
