--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
         <div class="about-me">
             <h2>About Me</h2>
-            My experience over the years has given me the skills
+            My experience over the years has equipped me with the skills to work with various programming languages, frameworks, databases, and other technologies that support my work, 
+            such as Node.js, Express.js, React, Java, Python, ASP.NET, Oracle, and more. I enjoy learning new technologies that help with my work and enhance my skills as a developer, allowing me to be versatile with the projects I am working on or assigned to.
         </div>
 
         <div class="project-container">
