Add images and CSS

--- a/index.html
+++ b/index.html
@@ -36,44 +36,26 @@
                 <button class="left" onclick="leftClick()"> < </button>
                 <div class="carousel">
                     <div class="project">
-                        <h3>Core Banking API</h3>
-                        <p>Built a high-performance API for banking transactions using Spring Boot and PostgreSQL.</p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <div class="project">
-                        <h3>Loan Origination System (LOS)</h3>
-                        <p>Developed a system to automate loan processing with complex business rules.</p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <div class="project">
-                        <h3>User Identity Management System</h3>
-                        <p>Developed a system to automate loan processing with complex business rules.</p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <div class="project">
-                        <h3>User Identity Management System</h3>
-                        <p>Developed a system to automate loan processing with complex business rules.</p>
-                        <a href="#">View Project</a>
+                        <h3>Portfolio</h3>
+                        <img src="./static/Github.png" class="project-image">
+                        <p>I created a portfolio website, a simple one to showcase my projects i done and the project i handle at my work over the years.</p>
                     </div>
                     <div class="project">
                         <h3>Core Banking API</h3>
-                        <p>Built a high-performance API for banking transactions using Spring Boot and PostgreSQL.</p>
-                        <a href="#">View Project</a>
+                        <img src="./static/LINE Bank.png" class="project-image">
+                        <p>Built a high-performance API for banking transactions using Spring Boot and Oracle as the database.</p>
+                        <p>Add a new loan product and involved in discussing on the technical aspect of the project.</p>
                     </div>
                     <div class="project">
                         <h3>Loan Origination System (LOS)</h3>
-                        <p>Developed a system to automate loan processing with complex business rules.</p>
-                        <a href="#">View Project</a>
+                        <img src="./static/KB Bukopin.jpg" class="project-image">
+                        <p>Created the backend of a Loan Origination System (LOS) with Spring Boot and provide swagger as the API documentation so that other teams can easily use the API.</p>
                     </div>
                     <div class="project">
                         <h3>User Identity Management System</h3>
-                        <p>Developed a system to automate loan processing with complex business rules.</p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <div class="project">
-                        <h3>User Identity Management System</h3>
-                        <p>Developed a system to automate loan processing with complex business rules.</p>
-                        <a href="#">View Project</a>
+                        <img src="./static/SailPoint.png" class="project-image">
+                        <p>Maintain and fix bugs to an existing User Identity Management System.</p>
+                        <p>Add some API Integration for a new application to integrate to the User Identity Management System.</p>
                     </div>
                 </div>
                 
