Add images and css

--- a/index.html
+++ b/index.html
@@ -39,12 +39,46 @@
                         <h3>Portfolio</h3>
                         <img src="./static/Github.png" class="project-image">
                         <p>I created a portfolio website, a simple one to showcase my projects i done and the project i handle at my work over the years.</p>
+                        <span class="footer-project">
+                            <span class="footer-project-img" data-tooltip="HTML Project">
+                                <img src="./static/HTML.png" alt="HTML">
+                            </span>
+                            <span class="footer-project-img" data-tooltip="JavaScript Project">
+                                <img src="./static/JS.png" alt="JavaScript">
+                            </span>
+                            <span class="footer-project-img" data-tooltip="CSS Project">
+                                <img src="./static/CSS.svg" alt="CSS">
+                            </span>
+                        </span>
                     </div>
                     <div class="project">
                         <h3>Core Banking API</h3>
                         <img src="./static/LINE Bank.png" class="project-image">
                         <p>Built a high-performance API for banking transactions using Spring Boot and Oracle as the database.</p>
                         <p>Add a new loan product and involved in discussing on the technical aspect of the project.</p>
+                        <span class="footer-project">
+                            <span class="footer-project-img" data-tooltip="Spring Boot">
+                                <img src="./static/Spring Boot.png" alt="Spring Boot">
+                            </span>
+                            <span class="footer-project-img" data-tooltip="Oracle">
+                                <img src="./static/Oracle.png" alt="Oracle">
+                            </span>
+                            <span class="footer-project-img" data-tooltip="Kibana">
+                                <img src="./static/Kibana.svg" alt="Kibana">
+                            </span>
+                            <span class="footer-project-img" data-tooltip="Swagger">
+                                <img src="./static/Swagger.png" alt="Swagger">
+                            </span>
+                            <span class="footer-project-img" data-tooltip="PostgreSQL">
+                                <img src="./static/PostgreSQL.png" alt="PostgreSQL">
+                            </span>
+                            <span class="footer-project-img" data-tooltip="Postman">
+                                <img src="./static/Postman.png" alt="Postman">
+                            </span>
+                            <span class="footer-project-img" data-tooltip="Docker">
+                                <img src="./static/Docker.png" alt="Docker">
+                            </span>
+                        </span>
                     </div>
                     <div class="project">
                         <h3>Loan Origination System (LOS)</h3>
