--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
                         <h3>Loan Origination System (LOS)</h3>
                         <img src="./static/KB Bukopin.jpg" class="project-image">
                         <p>Created the backend of a Loan Origination System (LOS) with Spring Boot and provide swagger as the API documentation so that other teams can easily use the API.</p>
+                        <span class="footer-project">
+                            <span class="footer-project-img" data-tooltip="Spring Boot">
+                                <img src="./static/Spring Boot.png" alt="Spring Boot">
+                            </span>
+                            <span class="footer-project-img" data-tooltip="Swagger">
+                                <img src="./static/Swagger.png" alt="Swagger">
+                            </span>
+                            <span class="footer-project-img" data-tooltip="PostgreSQL">
+                                <img src="./static/PostgreSQL.png" alt="PostgreSQL">
+                            </span>
+                            <span class="footer-project-img" data-tooltip="Postman">
+                                <img src="./static/Postman.png" alt="Postman">
+                            </span>
+                    </span>
                     </div>
                     <div class="project">
                         <h3>User Identity Management System</h3>
