--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,14 @@
     <link rel="icon" type="image/x-icon" href="./static/user.jpg">
     <script src="./script.js" defer></script>
 </head>
+
 <body>
     <div class="container">
-        
+
         <div class="header">
             <h1>Hi, I am George Steven Marcell</h1>
             <p>
-                An aspiring Fullstack / Backed Developer (Backend Heavy). 
+                An aspiring Fullstack / Backed Developer (Backend Heavy).
             </p>
         </div>
 
@@ -26,65 +28,84 @@
 
         <div class="about-me">
             <h2>About Me</h2>
-            My experience over the years has equipped me with the skills to work with various programming languages, frameworks, databases, and other technologies that support my work, 
-            such as Node.js, Express.js, React, Java, Python, ASP.NET, Oracle, and more. I enjoy learning new technologies that help with my work and enhance my skills as a developer, allowing me to be versatile with the projects I am working on or assigned to.
+            My experience over the years has equipped me with the skills to work with various programming languages,
+            frameworks, databases, and other technologies that support my work,
+            such as Node.js, Express.js, React, Java, Python, ASP.NET, Oracle, and more. I enjoy learning new
+            technologies that help with my work and enhance my skills as a developer, allowing me to be versatile with
+            the projects I am working on or assigned to.
         </div>
 
         <div class="project-container">
             <h2>Projects</h2>
             <div class="project-showcase">
-                <button class="left" onclick="leftClick()"> < </button>
-                <div class="carousel">
-                    <div class="project">
-                        <h3>Portfolio</h3>
-                        <img src="./static/Github.png" class="project-image">
-                        <p>I created a portfolio website, a simple one to showcase my projects i done and the project i handle at my work over the years.</p>
-                        <span class="footer-project">
-                                <img src="./static/HTML.png" alt="HTML">
-                                <img src="./static/JS.png" alt="JavaScript">
-                                <img src="./static/CSS.svg" alt="CSS">
-                        </span>
-                    </div>
-                    <div class="project">
-                        <h3>Core Banking API</h3>
-                        <img src="./static/LINE Bank.png" class="project-image">
-                        <p>Built a high-performance API for banking transactions using Spring Boot and Oracle as the database.</p>
-                        <p>Add a new loan product and involved in discussing on the technical aspect of the project.</p>
-                        <span class="footer-project">
-                                <img src="./static/Spring Boot.png" alt="Spring Boot">
-                                <img src="./static/Oracle.png" alt="Oracle">
-                                <img src="./static/Kibana.svg" alt="Kibana">
-                                <img src="./static/Swagger.png" alt="Swagger">
-                                <img src="./static/PostgreSQL.png" alt="PostgreSQL">
-                                <img src="./static/Postman.png" alt="Postman">
-                                <img src="./static/Docker.png" alt="Docker">
-                        </span>
-                    </div>
-                    <div class="project">
-                        <h3>Loan Origination System (LOS)</h3>
-                        <img src="./static/KB Bukopin.jpg" class="project-image">
-                        <p>Created the backend of a Loan Origination System (LOS) with Spring Boot and provide swagger as the API documentation so that other teams can easily use the API.</p>
-                        <span class="footer-project">
-                                <img src="./static/Spring Boot.png" alt="Spring Boot">
-                                <img src="./static/Swagger.png" alt="Swagger">
-                                <img src="./static/PostgreSQL.png" alt="PostgreSQL">
-                                <img src="./static/Postman.png" alt="Postman">
-                    </span>
-                    </div>
-                    <div class="project">
-                        <h3>User Identity Management System</h3>
-                        <img src="./static/SailPoint.png" class="project-image">
-                        <p>Maintain and fix bugs to an existing User Identity Management System.</p>
-                        <p>Add some API Integration for a new application to integrate to the User Identity Management System.</p>
-                    </div>
-                </div>
-                
-                <button class="right" onclick="rightClick()"> > </button>
+                <button class="left" onclick="leftClick()">
+                    < </button>
+                        <div class="carousel">
+                            <div class="project">
+                                <h3>Portfolio</h3>
+                                <img src="./static/Github.png" class="project-image">
+                                <p>I created a portfolio website, a simple one to showcase my projects i done and the
+                                    project i handle at my work over the years.</p>
+                                <span class="footer-project">
+                                    <img src="./static/HTML.png" alt="HTML">
+                                    <img src="./static/JS.png" alt="JavaScript">
+                                    <img src="./static/CSS.svg" alt="CSS">
+                                </span>
+                            </div>
+                            <div class="project">
+                                <h3>Core Banking API</h3>
+                                <img src="./static/LINE Bank.png" class="project-image">
+                                <p>Built a high-performance API for banking transactions using Spring Boot and Oracle as
+                                    the database.</p>
+                                <p>Add a new loan product and involved in discussing on the technical aspect of the
+                                    project.</p>
+                                <span class="footer-project">
+                                    <img src="./static/Spring Boot.png" alt="Spring Boot">
+                                    <img src="./static/Oracle.png" alt="Oracle">
+                                    <img src="./static/Kibana.svg" alt="Kibana">
+                                    <img src="./static/Swagger.png" alt="Swagger">
+                                    <img src="./static/PostgreSQL.png" alt="PostgreSQL">
+                                    <img src="./static/Postman.png" alt="Postman">
+                                    <img src="./static/Docker.png" alt="Docker">
+                                </span>
+                            </div>
+                            <div class="project">
+                                <h3>Loan Origination System (LOS)</h3>
+                                <img src="./static/KB Bukopin.jpg" class="project-image">
+                                <p>Created the backend of a Loan Origination System (LOS) with Spring Boot and provide
+                                    swagger as the API documentation so that other teams can easily use the API.</p>
+                                <span class="footer-project">
+                                    <img src="./static/Spring Boot.png" alt="Spring Boot">
+                                    <img src="./static/Swagger.png" alt="Swagger">
+                                    <img src="./static/PostgreSQL.png" alt="PostgreSQL">
+                                    <img src="./static/Postman.png" alt="Postman">
+                                </span>
+                            </div>
+                            <div class="project">
+                                <h3>User Identity Management System</h3>
+                                <img src="./static/SailPoint.png" class="project-image">
+                                <p>Maintain and fix bugs to an existing User Identity Management System.</p>
+                                <p>Add some API Integration for a new application to integrate to the User Identity
+                                    Management System.</p>
+                                <span class="footer-project">
+                                    <img src="./static/Spring Boot.png" alt="Spring Boot">
+                                    <img src="./static/Swagger.png" alt="Swagger">
+                                    <img src="./static/MySQL.png" alt="MySQL">
+                                    <img src="./static/Postman.png" alt="Postman">
+                                    <img src="./static/HTML.png" alt="HTML">
+                                    <img src="./static/JS.png" alt="JavaScript">
+                                    <img src="./static/CSS.svg" alt="CSS">
+                                    <img src="./static/AngularJS.png" alt="AngularJS">
+                                </span>
+                            </div>
+                        </div>
+
+                        <button class="right" onclick="rightClick()"> > </button>
             </div>
         </div>
     </div>
 
-<!-- <header>
+    <!-- <header>
     <h1>George Steven Marcell</h1>
     <p>Backend Fullstack Developer</p>
 </header>
@@ -115,9 +136,10 @@
     <p>LinkedIn: <a href="#">linkedin.com/in/yourprofile</a></p>
 </section> -->
 
-<footer>
-    <p>&copy; 2025 George Steven Marcell. All Rights Reserved.</p>
-</footer>
+    <footer>
+        <p>&copy; 2025 George Steven Marcell. All Rights Reserved.</p>
+    </footer>
 
 </body>
+
 </html>
