Fix some things

--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
                                 <p>I created a portfolio website, a simple one to showcase my projects i done and the
                                     project i handle at my work over the years.</p>
                                 <span class="footer-project">
-                                    <img src="./static/HTML.png" alt="HTML">
-                                    <img src="./static/JS.png" alt="JavaScript">
-                                    <img src="./static/CSS.svg" alt="CSS">
+                                    <span class="footer-project-img" data-tooltip="HTML Project">
+                                        <img src="./static/HTML.png" alt="HTML">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="JavaScript Project">
+                                        <img src="./static/JS.png" alt="JavaScript">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="CSS Project">
+                                        <img src="./static/CSS.svg" alt="CSS">
+                                    </span>
                                 </span>
                             </div>
                             <div class="project">
@@ -60,13 +66,27 @@
                                 <p>Add a new loan product and involved in discussing on the technical aspect of the
                                     project.</p>
                                 <span class="footer-project">
-                                    <img src="./static/Spring Boot.png" alt="Spring Boot">
-                                    <img src="./static/Oracle.png" alt="Oracle">
-                                    <img src="./static/Kibana.svg" alt="Kibana">
-                                    <img src="./static/Swagger.png" alt="Swagger">
-                                    <img src="./static/PostgreSQL.png" alt="PostgreSQL">
-                                    <img src="./static/Postman.png" alt="Postman">
-                                    <img src="./static/Docker.png" alt="Docker">
+                                    <span class="footer-project-img" data-tooltip="Spring Boot">
+                                        <img src="./static/Spring Boot.png" alt="Spring Boot">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="Oracle">
+                                        <img src="./static/Oracle.png" alt="Oracle">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="Kibana">
+                                        <img src="./static/Kibana.svg" alt="Kibana">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="Swagger">
+                                        <img src="./static/Swagger.png" alt="Swagger">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="PostgreSQL">
+                                        <img src="./static/PostgreSQL.png" alt="PostgreSQL">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="Postman">
+                                        <img src="./static/Postman.png" alt="Postman">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="Docker">
+                                        <img src="./static/Docker.png" alt="Docker">
+                                    </span>
                                 </span>
                             </div>
                             <div class="project">
@@ -75,10 +95,18 @@
                                 <p>Created the backend of a Loan Origination System (LOS) with Spring Boot and provide
                                     swagger as the API documentation so that other teams can easily use the API.</p>
                                 <span class="footer-project">
-                                    <img src="./static/Spring Boot.png" alt="Spring Boot">
-                                    <img src="./static/Swagger.png" alt="Swagger">
-                                    <img src="./static/PostgreSQL.png" alt="PostgreSQL">
-                                    <img src="./static/Postman.png" alt="Postman">
+                                    <span class="footer-project-img" data-tooltip="Spring Boot">
+                                        <img src="./static/Spring Boot.png" alt="Spring Boot">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="Swagger">
+                                        <img src="./static/Swagger.png" alt="Swagger">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="PostgreSQL">
+                                        <img src="./static/PostgreSQL.png" alt="PostgreSQL">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="Postman">
+                                        <img src="./static/Postman.png" alt="Postman">
+                                    </span>
                                 </span>
                             </div>
                             <div class="project">
@@ -88,15 +116,30 @@
                                 <p>Add some API Integration for a new application to integrate to the User Identity
                                     Management System.</p>
                                 <span class="footer-project">
-                                    <img src="./static/Spring Boot.png" alt="Spring Boot">
-                                    <img src="./static/Swagger.png" alt="Swagger">
-                                    <img src="./static/MySQL.png" alt="MySQL">
-                                    <img src="./static/Postman.png" alt="Postman">
-                                    <img src="./static/HTML.png" alt="HTML">
-                                    <img src="./static/JS.png" alt="JavaScript">
-                                    <img src="./static/CSS.svg" alt="CSS">
-                                    <img src="./static/AngularJS.png" alt="AngularJS">
-                                </span>
+                                    <span class="footer-project-img" data-tooltip="Spring Boot">
+                                        <img src="./static/Spring Boot.png" alt="Spring Boot">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="Swagger">
+                                        <img src="./static/Swagger.png" alt="Swagger">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="MySQL">
+                                        <img src="./static/MySQL.png" alt="MySQL">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="Postman">
+                                        <img src="./static/Postman.png" alt="Postman">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="HTML">
+                                        <img src="./static/HTML.png" alt="HTML">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="JavaScript">
+                                        <img src="./static/JS.png" alt="JavaScript">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="CSS">
+                                        <img src="./static/CSS.svg" alt="CSS">
+                                    </span>
+                                    <span class="footer-project-img" data-tooltip="AngularJS">
+                                        <img src="./static/AngularJS.png" alt="AngularJS">
+                                    </span>
                             </div>
                         </div>
 
