Add sections and beautify some things

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             <p>
                 An aspiring Fullstack / Backed Developer (Backend Heavy).
             </p>
+            <section>
+                <h2>Contact</h2>
+                <p>Email: georgestevenmarcell@gmail.com</p>
+                <p>GitHub: <a href="https://github.com/Monkey2580/Projects/tree/main">Monkey2580</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/george-steven-marcell-6b293b209/">George Steven Marcell</a></p>
+            </section>
         </div>
 
         <div class="header">
@@ -142,44 +148,113 @@
                                     </span>
                             </div>
                         </div>
-
                         <button class="right" onclick="rightClick()"> > </button>
+            </div>
+        </div>
+
+        <div class="technology-container">
+            <h2>Technologies</h2>
+            <div class="technology-used">
+                <div class="card">
+                    <div class="card-header">
+                        Technologies
+                    </div>
+                    <div class="icon-grid">
+                        <div class="icon">
+                            <img src="./static/Spring Boot.png" alt="Spring Boot">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Swagger.png" alt="Swagger">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/MySQL.png" alt="MySQL">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Postman.png" alt="Postman">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/HTML.png" alt="HTML">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/JS.png" alt="JavaScript">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/CSS.svg" alt="CSS">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/AngularJS.png" alt="AngularJS">
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        Technologies
+                    </div>
+                    <div class="icon-grid">
+                        <div class="icon">
+                            <img src="./static/Spring Boot.png" alt="Spring Boot">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Swagger.png" alt="Swagger">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/MySQL.png" alt="MySQL">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Postman.png" alt="Postman">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/HTML.png" alt="HTML">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/JS.png" alt="JavaScript">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/CSS.svg" alt="CSS">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/AngularJS.png" alt="AngularJS">
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        Technologies
+                    </div>
+                    <div class="icon-grid">
+                        <div class="icon">
+                            <img src="./static/Spring Boot.png" alt="Spring Boot">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Swagger.png" alt="Swagger">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/MySQL.png" alt="MySQL">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Postman.png" alt="Postman">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/HTML.png" alt="HTML">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/JS.png" alt="JavaScript">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/CSS.svg" alt="CSS">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/AngularJS.png" alt="AngularJS">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    <!-- <header>
-    <h1>George Steven Marcell</h1>
-    <p>Backend Fullstack Developer</p>
-</header>
+    <!-- -->
 
-<section>
-    <h2>About Me</h2>
-    <p>Throughout my journey, I've cultivated a deep love for Coding in general, driven by my dedication to further improve my coding skills, knowledge, and master. My portfolio is a showcase of my relentless pursuit of excellence, where each project represents not just a task completed, but a piece of my heart and soul. From my campus projects to projects that I have work on a professional level, my work reflects my commitment to pushing boundaries and crafting meaningful solutions.</p>
-</section>
-
-<section>
-    <h2>Skills</h2>
-    <ul>
-        <li>Java, Python, Go</li>
-        <li>Spring Boot, Django, Node.js</li>
-        <li>PostgreSQL, MySQL, MongoDB, Redis</li>
-        <li>Docker, Kubernetes, AWS, CI/CD</li>
-    </ul>
-</section>
-
-<section>
-    
-</section>
-
-<section>
-    <h2>Contact</h2>
-    <p>Email: your.email@example.com</p>
-    <p>GitHub: <a href="#">github.com/yourusername</a></p>
-    <p>LinkedIn: <a href="#">linkedin.com/in/yourprofile</a></p>
-</section> -->
-
-    <footer>
+    <footer class="footer-container">
         <p>&copy; 2025 George Steven Marcell. All Rights Reserved.</p>
     </footer>
 
